lab1/Test/L1-A-12-94.cmm
struct {
}B4Mm ( ) int phBZIT_2CY4mF0MJR ;
int B6KTItX5S2679x7fS_8 ;
{
  int fJT7IpmiuIlYPO ;
  struct BOoz6 znTdmXuppAbWL ;
  float BR79FQpUTO1LvrRVq , HF7WhwYHD6e5W3 ;
  int u [ 2122229392 ] = l ;
  if ( x37MHcVkQw3NM7n1CNLB )   if ( BWfN1mc1Ss ) 
      while ( mai ) {
    if ( kE0F1cTdjDv2E6D )     bULOVWp ;
else     while ( dDV8FXSnG7B )     while ( Nu1mf9Rj 
      )     oegisv7z ;



  }
else   return h ;

else   if ( UPBBnA5zd6NXsnsJ1 )   EAbdZl06B && pXP8ySJR9XJq 
    > f + * m8tRkPio [ B8kBJNPCpZ = wpWMq6ROv = _6WmfI3IC6vsw 
    || Yq8TbOWyAMvF1RZ - Tln2ZPRPW9uxacELGq * - ydUh ( 
    T , B && oJO6ppeHc9ZD < ! ( ZC4p9JX = wkODRqvFt >= 
    - ! - - - ( Whj || SFRqZHB1cjq39JBPU == gF5Zh6kiZJA0n 
    ) <= 1769937156.898524542 * URqEOcKQgeR4qrw ) . RefwaF59ZXohkGmEur 
    . klyNnh ) ] != ! YOSCVqVhl7v ( ) / ! - 1507406477 
    ;


}}
struct ZozvXnHhFHmrclIoXI bUuA , XAjeWbpHBtQpNTx 


struct dT0TLeM ;
int ;
int ;
int ;
int ;
int ;
struct tZZPInxO ;
struct YPV41G62OMVmuoWi7s p4G 
;
int ;
struct I_FdN9J {
};
int ;
int ;
int Q1IyiiQfZ ( ) {
}
int gvb62NfqQj4tmoPlR35 ( int DoUVfnCo3Gibt4NB ) {
}
int ;
int BO2B7hIoNus ( ) {
}
int MazOsW6wJRY2NLNV ( ) {
}
int ;
int ep38NPPERq ( ) {
}
int ;
int GgosRB ( ) {
}
int ;
int DTGbMqeG ( ) {
}
int ;
int ;
int ;
int NclKQKTL54kW_j ( int LM079STvvxfgJ72OiN , int 
  gc1m ) {
}
